--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,17 @@
 
   <title>QR code component</title>
 </head>
-<body class="bg-[#D6E2F0] text-base">
-
-      <div class="h-screen w-full">
-        <div class="grid gap-y-3 h-[30vw] w-[18vw]">
-        <img src="/images/image-qr-code.png" alt="qr-code-image">
-        <div class="font-bold">
-             Improve your front-end skills by building projects
-        </div>
-        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-      </div>
-      </div>
+<body class="bg-[#D6E2F0] text-base w-full h-full">
+      <div class="flex justify-center items-center h-screen w-full">
+      <div class="flex justify-around flex-col bg-white w-[18vw] rounded-2xl pt-[5px] pr-[12px] pb-[15px] pl-[12px]">
+                      <img  class="rounded-2xl" src="/images/image-qr-code.png" alt="qr-code-image">
+                           <div class="font-bold text-center">
+                               Improve your front-end skills by building projects
+                           </div>
+                               Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+                  </div>
+              </div>
 </body>
 </html>
+
+<!--justify-center content-center-->
